[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/kenney_topdown-shooter/Spritesheet/spritesheet_characters.png" type="Texture" id=1]
[ext_resource path="res://actors/ShootingAI.tscn" type="PackedScene" id=2]
[ext_resource path="res://actors/navigation/MovementSystem.tscn" type="PackedScene" id=3]
[ext_resource path="res://actors/Player.gd" type="Script" id=4]
[ext_resource path="res://weapons/Weapon.tscn" type="PackedScene" id=7]
[ext_resource path="res://actors/Statistics.tscn" type="PackedScene" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 15.0

[node name="Player" type="KinematicBody2D"]
input_pickable = true
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 350, -2, 38, 46 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Statistics" parent="." instance=ExtResource( 9 )]
health = 100

[node name="Weapon" parent="." instance=ExtResource( 7 )]
position = Vector2( 18.1483, 10.7813 )
scale = Vector2( 0.9, 0.9 )

[node name="ShootingAI" parent="." instance=ExtResource( 2 )]

[node name="MovementSystem" parent="." instance=ExtResource( 3 )]
[connection signal="input_event" from="." to="." method="_on_Player_input_event"]
